--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
-<div>This is my result: <%= @result %></div>
+<div>Number of rounds aggregated: <%= @result.keys.count %></div>
