result page and bankers form added

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,29 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-<div>Number of rounds aggregated: <%= @result.keys.count %></div>
+<h1>Welcome</h1>
+
+
+<div>
+  <form action="/result/index" method="post">
+    <div>Place your round bankers</div>
+    <ul>
+      <li><span>1: </span><input name="1" type="text"></li>
+      <li><span>2: </span><input name="2" type="text"></li>
+      <li><span>3: </span><input name="3" type="text"></li>
+      <li><span>4: </span><input name="4" type="text"></li>
+      <li><span>5: </span><input name="5" type="text"></li>
+      <li><span>6: </span><input name="6" type="text"></li>
+      <li><span>7: </span><input name="7" type="text"></li>
+      <li><span>8: </span><input name="8" type="text"></li>
+      <li><span>9: </span><input name="9" type="text"></li>
+      <li><span>10: </span><input name="10" type="text"></li>
+      <li><span>11: </span><input name="11" type="text"></li>
+      <li><span>12: </span><input name="12" type="text"></li>
+      <li><span>13: </span><input name="13" type="text"></li>
+      <li><span>14: </span><input name="14" type="text"></li>
+      <li><span>15: </span><input name="15" type="text"></li>
+      <li><span>16: </span><input name="16" type="text"></li>
+    </ul>
+    <input type="submit">
+  </form>
+</div>
+
+
